# OneMarkdown

./: .eslintrc.cjs  .gitignore  PROMPT.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  对话历史.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Editor.vue
src/services/: noteService.ts  platformAdapter.ts
src/services/vault/: FileCache.ts  Vault.ts
src/stores/: useNoteStore.ts
src/styles/: main.less
