[package]
name = "onemditor"
version = "0.1.0"
description = "OneMDEditor"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "path-all"] }

[[bin]]
name = "onemditor"
path = "src/main.rs"
